deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kisslog-frontend
  namespace: kisslog
  labels:
    app: kisslog-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kisslog-frontend
  template:
    metadata:
      labels:
        app: kisslog-frontend
    spec:
      volumes:
        - name: appsettings
          configMap:
            name: appsettings-kisslog-frontend
        - name: kisslog
          configMap:
            name: kisslog-frontend
      containers:
      - name: kisslog-frontend
        image: catalingavan/kisslog.frontend:4.0.0
        volumeMounts:
            - name: appsettings
              mountPath: /app/appsettings.json
              subPath: appsettings.json
            - name: kisslog
              mountPath: /app/Configuration/KissLog.json
              subPath: KissLog.json
        ports:
        - containerPort: 80
