deployment-mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kisslog-mariadb
  namespace: kisslog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb
      containers:
      - name: mariadb
        image: mariadb
        ports:
          - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: mariadb
