deployment-mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kisslog-mongodb
  namespace: kisslog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongodb
      containers:
      - name: mongodb
        image: mongo
        ports:
          - containerPort: 27017
        volumeMounts:
        - mountPath: "/data/db"
          name: mongodb
