service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: kisslog-backend
  namespace: kisslog
spec:
  type: NodePort
  selector:
    app: kisslog-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30088
