service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: kisslog-frontend
  namespace: kisslog
spec:
  type: NodePort
  selector:
    app: kisslog-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
