service-mariadb.yml
apiVersion: v1
kind: Service
metadata:
  name: kisslog-mariadb
  namespace: kisslog
spec:
  selector:
    app: mariadb
  ports:
  - protocol: TCP
    port: 3306
