service-mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: kisslog-mongodb
  namespace: kisslog
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
